Bug 1537735 - Always update mask layers for ClientTiledPaintedLayer, even if nothing within the Layer itself has changed. r=mstange

Differential Revision: https://phabricator.services.mozilla.com/D29753